# sconegym

./: .gitignore  README.md  environment_creation_example.py  example.py  example_deprl.py  example_environment.py  pyproject.toml  requirements.txt  setup.py  test_deprl.py  test_environments.py  test_osim.py
sconegym/: __init__.py  gaitgym.py  init_v0.py
sconegym/data/: H0918-v1.scone  H0918.scone  H0918S-v1.scone  H0918_S2.hfd  H0918_S2.scone  H0918_osim-v1.scone  H0918v2i.hfd  H0918v2i.osim  H0918v2i.scone  H0918v2i_osim.scone  H1622-v1.scone  H1622.hfd  H1622.scone  H1622S-v1.scone  H1622Sv2j.hfd  H1622_S2.hfd  H1622_S2.scone  H1622v2j.hfd  H2190.hfd  H2190.scone  H2190_S2.hfd  H2190_S2.scone
sconegym/data-v1/: H0918.scone  H0918S.scone  H0918Sv2j.hfd  H0918Sv2jb.hfd  H0918_run.scone  H0918_test_ad.scone  H1622.scone  H1622S.scone  H1622Sv2k.hfd  H1622Sv2kb.hfd  H1622_run.scone  H2190.scone  H2190_S2.scone  H2190_run.scone  H2190v2k.hfd  H2190v2k_S2.hfd  InitStateRun45.zml  InitStateRun55.zml
