[tool.poetry]
name = "sconegym"
version = "0.2.0"
description = "Gym environment for scone-hyfydy."
authors = ["Pierre Schumacher <pierre.schumacher@tuebingen.mpg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
torch = "*"

[tool.poetry.group.dev.dependencies]
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
